# MyKeyManager

./: .dockerignore  .env.server.example  .gitignore  ADVANCED_PORT_CONFIG.md  ALL_IN_ONE_GUIDE.md  API_ENDPOINT_FIX.md  CASAOS_INSTALLATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOY_AAPANEL.md  DOCKER_CONTAINER_MANAGER_GUIDE.md  DOCKER_HUB_GUIDE.md  DOCKER_PERMISSIONS_GUIDE.md  Dockerfile.all-in-one  Dockerfile.all-in-one.backup  Dockerfile.all-in-one.new  FIX_SUMMARY_CASAOS.md  GITHUB_SETUP.md  HOTFIX_NOTES_v1.1.3.md  INSTALL_ARM64_SERVER.md  INSTALL_CASAOS.md  INSTALL_DOCKER.md  LICENSE  PORT_GUIDE.md  QUICK_CLEANUP.md  README.md  README.md.backup  README_DOCKERHUB.md  REDIS_TROUBLESHOOTING_GUIDE.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  SERVER_INSTALLATION_GUIDE.md  TROUBLESHOOTING_BUILD_CONTEXT.md  TROUBLESHOOTING_CASAOS.md  VERSIONING.md  VOLUME_CLEANUP_GUIDE.md  build-and-push.sh  change-password-direct.sh  clean-volumes.sh  configure-all-in-one.sh  (+40 more)
backend/: Dockerfile  migrate_smtp.py  pyproject.toml
backend/app/: config.py  database.py  deps.py  email_utils.py  main.py  models.py  rate_limit.py  rate_limit_fixed.py  schemas.py  security.py  security_headers.py  test_health.py
backend/app/api/: router.py  routes_auth.py  routes_categories.py  routes_licenses.py  routes_users.py
backend/app/migrations/: add_smtp_settings.py  add_user_fields.py
devops/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: Dockerfile  fontawesome-test.html  index.html  package.json  test-complete.html  tsconfig.json  (+1 more)
(+28 files in other folders)
